log
Wed, Apr 16, 2025  8:17:30 AM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Wed, Apr 16, 2025  8:28:12 AM: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
91b49f8
Wed, Apr 16, 2025  8:55:35 AM: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 10/70
1a313c4
Wed, Apr 16, 2025  8:58:41 AM: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:79:9: error: expected ';' before 'return'
         return current;
         ^~~~~~
7c4a293
Wed, Apr 16, 2025  8:59:03 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
14a5dc3
Wed, Apr 16, 2025  9:04:44 AM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:84:13: error: 'true' undeclared (first use in this function)
     } while(true);
             ^~~~
hashmap.c:84:13: note: each undeclared identifier is reported only once for each function it appears in
bc369b2
Wed, Apr 16, 2025  9:04:52 AM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:84:13: error: 'true' undeclared (first use in this function)
     } while(true);
             ^~~~
hashmap.c:84:13: note: each undeclared identifier is reported only once for each function it appears in
95add45
Wed, Apr 16, 2025  9:21:09 AM: 
 hashmap.c | 18 +++++-------------
 1 file changed, 5 insertions(+), 13 deletions(-)
 tests:  4|4
total_score: 20/70
c77e265
Wed, Apr 16, 2025  9:24:12 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|4
total_score: 20/70
4208e43
Wed, Apr 16, 2025  7:46:50 PM: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  8|3
total_score: 40/70
00e7934
